--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="description">I have always been scared of coding because i doubted my abilities. Just after bagging my graduate degree, I suddenly decided to put my ability to test and with no doubts, i have been doing really fine in web development. </p>
         </div> 
         <div class="skills">
-            <img class="engineering" src="engineering.png.jpg" alt="engineering image">
+            <img class="engineering" src="engineering.jpg" alt="engineering image">
         <h3>Engineering & Construction</h3>
         <p class="description">Right from my childhood, i have always loved everything that has to do with construction and with time, i have been able to obtain my bachelor's degree in engineering (structural to be precise). </p>
         </div> 
